[tool.poetry]
name = "anmeldung"
version = "0.1.0"
description = ""
authors = ["Maksadbek Akhmedov <maksadbek.akhmedov@hellofresh.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
requests = "^2.28.2"
python-telegram-bot = "^20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
